01/errors.txt~
1. Hi.java:1: error: class hi is public, should be declared in a file named hi.java
public class hi{
       ^
1 error


2. No error on number.  Changing big H to a small one is allowable.


3. 
Hi.java:3: error: ')' expected
            System.out.println(hello, world!");
                                           ^
Hi.java:3: error: unclosed string literal
            System.out.println(hello, world!");
                                            ^
Hi.java:3: error: ';' expected
            System.out.println(hello, world!");
                                               ^
Hi.java:5: error: reached end of file while parsing
}
 ^
4 errors


4.
Hi.java:3: error: unclosed string literal
            System.out.println("hello, world!);
                               ^
Hi.java:3: error: ';' expected
            System.out.println("hello, world!);
                                               ^
Hi.java:5: error: reached end of file while parsing
}
 ^
3 errors


5.

Error: Main method not found in class Hi, please define the main method as:
public static void main(String[] args)
or a JavaFX application class must extend javafx.application.Application
- It compiled no problem. The error appeared when the program was run. 


6. 


Hi.java:3: error: cannot find symbol
System.out.printline("Hello, world!");
^
symbol:   method printline(String)
location: variable out of type PrintStream
1 error


7.


Hi.java:3: error: ';' expected
    System.out.println("Hello, world!")
                                       ^
1 error




8.

                                               ^
Hi.java:4: error: reached end of file while parsing
                }
                 ^
2 errors
